# AVR-labs

./: .gitignore  .gitmodules  LICENSE.txt  README.es-co.md  README.md  README.nl.md  README.pt.md  meson.build  prune_simavr.sh
archive/01-blink/asm/: blink.s
archive/atmega328p/simulator/static/: index-001.html  index.html
archive/docs/: led-matrix.html
archive/docs/advanced/: README.es-co.md  README.md
archive/docs/advanced/reverse-engineering/: README.nl.md  README.pt.md
archive/docs/how-to-use/: README.es-co.md  README.md  README.nl.md  README.pt.md
archive/docs/index/: README.nl.md  README.pt.md
archive/docs/learning-paths/: README.es-co.md  README.md  README.nl.md
archive/docs/legal/: README.md  README.pt.md
archive/docs/root/: README.es-co.md  README.pt.md
archive/labs/: README.md  meson.build
archive/labs/atmega328p/01-blink/: meson.build
archive/labs/atmega328p/01-blink/asm/: meson.build
archive/labs/docs/: README.nl.md  README.pt.md
archive/scripts/: build_sketch.sh
archive/simulator/: bridge
archive/tools/flash/: meson.build
docs/: another-example.html  arduino-simul.html  led-matrix-muliplexed.html  mexican-wave.html  rgb-led.html
docs/advanced/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/advanced/reverse-engineering/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/how-to-use/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/index/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/learning-paths/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/legal/: README.es-co.md  README.md  README.nl.md  README.pt.md
docs/root/: README.es-co.md  README.nl.md  README.pt.md
labs/: README.md  configure.sh  meson.build
labs/atmega328p/: README.md  meson.build
labs/atmega328p/01-blink/: README.md  meson.build
labs/atmega328p/01-blink/asm/: README.md  blink.ld  meson.build
labs/atmega328p/01-blink/simulator/: meson.build  simulate.c
labs/atmega328p/02-timed-blink/: meson.build
labs/atmega328p/02-timed-blink/asm/: meson.build
labs/atmega328p/02-timed_blink/: meson.build
labs/atmega328p/02-timedblink/: README.md  meson.build
labs/atmega328p/02-timedblink/asm/: timed_blink.s  timedblink.ld
labs/atmega328p/02-timedblink/simulator/: meson.build  simulate.c
labs/atmega328p/simulator/: Makefile  server.py
labs/clients/: atmega328p.py
labs/docs/: README.es-co.md
labs/hosts/: meson.build
labs/hosts/atmega328p/: virt-atmega328p.c
labs/scripts/: avrun.sh
labs/tools/: meson.build
labs/tools/flash/: meson.build
tools/: meson.build
tools/flash/: README.md  flash.c  meson.build
tools/virt-atmega328p/: README.md  meson.build  virt-atmega328p.c
