# labs/atmega328p/01-blink/meson.build

# Define the lab name here
lab_name = '01-blink'

# Construct the relative install path: atmega328p/01-blink/bin
# (mcu is inherited from atmega328p/meson.build)
lab_bin_dir = mcu / lab_name / 'bin'

# Now call the sub-components
subdir('asm')
subdir('simulator')

